cleaned code and fixed broken styles

--- a/ui2022/src/app/util/common-components/icons/barrel-icon/barrel-icon.component.scss
+++ b/ui2022/src/app/util/common-components/icons/barrel-icon/barrel-icon.component.scss
@@ -1,6 +1,6 @@
 .svg-icon {
   path {
-    fill: #65594e;
+    fill: var(--brown);
   }
 }
 
