--- a/ui2022/src/app/util/common-components/icons/tree-icon/tree-icon.component.scss
+++ b/ui2022/src/app/util/common-components/icons/tree-icon/tree-icon.component.scss
@@ -1,6 +1,7 @@
 .svg-icon {
   path {
     fill: #3c3335;
+    fill: var(--brown);
     transform: scale(0.75);
   }
   margin-right: 0.5rem;
